synopsis: "OCaml Bindlib library for bound variables"
description:
"""
Bindlib is a library allowing the manipulation of data structures
with bound variables. It is particularly useful when writing ASTs
for programming languages, but also for manipulating terms of the
λ-calculus or quantified formulas.
"""

opam-version: "2.0"
maintainer: "Rodolphe Lepigre <lepigre@mpi-sws.org>"
bug-reports: "https://github.com/rlepigre/ocaml-bindlib/issues"
homepage: "https://rlepigre.github.io/ocaml-bindlib/"
authors: [
  "Christophe Raffalli <christophe@raffalli.eu>"
  "Rodolphe Lepigre <lepigre@mpi-sws.org>" ]
license: "LGPL-3.0"
dev-repo: "git+https://github.com/rlepigre/ocaml-bindlib.git"

depends: [
  "ocaml" { >= "3.12.1" }
  "dune"  { >= "2.7.0" }
]

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
