(executable
 (name church)
 (modules Church)
 (libraries bindlib))

(executable
 (name scott)
 (modules Scott)
 (libraries bindlib))

(executable
 (name lambdas)
 (modules Lambdas)
 (libraries bindlib))

(executable
 (name bench_de_bruijn)
 (modules Bench_de_bruijn))

(executable
 (name bench)
 (modules Bench)
 (libraries bindlib))
